Refactored and formatted code

--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -23,6 +23,8 @@ on:
     branches: [ "main" ]
 
 permissions:
+  # Required to upload SARIF file to CodeQL. See: https://github.com/github/codeql-action/issues/2117
+  actions: read
   # Require writing security events to upload SARIF file to security tab
   security-events: write
   # Read commit contents
@@ -38,6 +40,11 @@ jobs:
         -r
         --skip-git
         ./
+      upload-sarif: true
+      fail-on-vuln: false
+    permissions:
+      # Require writing security events to upload SARIF file to security tab
+      security-events: write
   scan-pr:
     if: ${{ github.event_name == 'pull_request' || github.event_name == 'merge_group' }}
     uses: "google/osv-scanner-action/.github/workflows/osv-scanner-reusable-pr.yml@1f1242919d8a60496dd1874b24b62b2370ed4c78" # v1.7.1
@@ -47,3 +54,8 @@ jobs:
         -r
         --skip-git
         ./
+      upload-sarif: true
+      fail-on-vuln: false
+    permissions:
+      # Require writing security events to upload SARIF file to security tab
+      security-events: write
