Refactored and formatted code

--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -33,7 +33,7 @@ permissions:
 jobs:
   scan-scheduled:
     if: ${{ github.event_name == 'push' || github.event_name == 'schedule' }}
-    uses: "google/osv-scanner-action/.github/workflows/osv-scanner-reusable.yml@2.0.2"
+    uses: "google/osv-scanner-action/.github/workflows/osv-scanner-reusable.yml@v2.0.1"
     with:
       # Example of specifying custom arguments
       scan-args: |-
@@ -43,11 +43,15 @@ jobs:
       upload-sarif: true
       fail-on-vuln: false
     permissions:
+      # Required to upload SARIF file to CodeQL. See: https://github.com/github/codeql-action/issues/2117
+      actions: read
       # Require writing security events to upload SARIF file to security tab
       security-events: write
+      # Read commit contents
+      contents: read
   scan-pr:
     if: ${{ github.event_name == 'pull_request' || github.event_name == 'merge_group' }}
-    uses: "google/osv-scanner-action/.github/workflows/osv-scanner-reusable-pr.yml@2.0.2"
+    uses: "google/osv-scanner-action/.github/workflows/osv-scanner-reusable-pr.yml@v2.0.1"
     with:
       # Example of specifying custom arguments
       scan-args: |-
@@ -57,5 +61,9 @@ jobs:
       upload-sarif: true
       fail-on-vuln: false
     permissions:
+      # Required to upload SARIF file to CodeQL. See: https://github.com/github/codeql-action/issues/2117
+      actions: read
       # Require writing security events to upload SARIF file to security tab
       security-events: write
+      # Read commit contents
+      contents: read
