--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -38,7 +38,7 @@ jobs:
       # Example of specifying custom arguments
       scan-args: |-
         -r
-        --skip-git
+        --include-git-root
         ./
       upload-sarif: true
       fail-on-vuln: false
@@ -56,7 +56,7 @@ jobs:
       # Example of specifying custom arguments
       scan-args: |-
         -r
-        --skip-git
+        --include-git-root
         ./
       upload-sarif: true
       fail-on-vuln: false
